Fix navigation tooltip overflow in Safari

--- a/ccbrowse/www/css/ccbrowse.scss
+++ b/ccbrowse/www/css/ccbrowse.scss
@@ -51,6 +51,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 #overlay {
